# KandVST

./: .gitignore  AudioPlugin.jucer  CMakeLists.txt  CMakeSettings.json  Padded Up.xml  README.md  buildResc.py  knob.psd
Code/Plugin/: AudioPlugin.jucer  CMakeLists.txt  about.txt  buildProject.bat  buildResc.py  genBuild.bat  genBuildx64.bat  ir.txt  log.txt  midi_log.txt
Code/Plugin/Resources/: about.txt
Code/Plugin/Resources/Presets/: chip_pluck_lfo.xml  church.xml
Code/Plugin/Resources_h/: Resources_files.h
Code/Plugin/Source/: ConvolutionReverb.cpp  ConvolutionReverb.h  DelayEffect.cpp  DelayEffect.h  DistEffect.cpp  DistEffect.h  EnvelopeGenerator.cpp  EnvelopeGenerator.h  ExampleEffect.cpp  ExampleEffect.h  FilterButterworth.cpp  FilterButterworth.h  FilterHP.cpp  FilterHP.h  FilterLP.cpp  FilterLP.h  Global.h  IEffect.h  IGenerator.cpp  IGenerator.h  IVSTParameters.cpp  IVSTParameters.h  IWavetable.h  KandVST.sln  KandVST.vcxproj  KandVST.vcxproj.filters  LFO.cpp  LFO.h  LFOsc.cpp  LFOsc.h  Linkable.cpp  Log.cpp  Log.h  OscillatorMixer.cpp  OscillatorMixer.h  OurLookAndFeel.cpp  OurLookAndFeel.h  ParameterHandler.cpp  ParameterHandler.h  ParameterListener.h  (+27 more)
Code/Plugin/Source/Components/: AboutPageComponent.cpp  AboutPageComponent.h  CollectionComponent.cpp  CollectionComponent.h  ConsoleComponent.cpp  ConsoleComponent.h  DelayComponent.cpp  DelayComponent.h  DistComponent.cpp  DistComponent.h  EnvelopeComponent.cpp  EnvelopeComponent.h  FilterComponent.cpp  FilterComponent.h  InformationComponent.cpp  InformationComponent.h  LFOComponent.cpp  LFOComponent.h  MarkdownComponent.cpp  MarkdownComponent.h  MasterComponent.cpp  MasterComponent.h  MasterPageComponent.cpp  MasterPageComponent.h  MixerComponent.cpp  MixerComponent.h  MixerSubComponent.cpp  MixerSubComponent.h  OSCLFOComponent.cpp  OSCLFOComponent.h  (+27 more)
Code/Plugin/Tester/: CMakeLists.txt  IID_defs.cpp  TestHost.cpp  TestHost.h  folders.h  hostVST.cpp  hostVST.h  main.cpp  util.cpp  util.h  wrapperVST.cpp  wrapperVST.h
Code/Plugin/Tester/Tests/Detune_Verification/: Detune_Verification.h
Code/Plugin/Tester/Tests/Dist_Verification/: Dist_Verification.h  verify.py
Code/Plugin/Tester/Tests/Highpass_filter/: Highpass_filter.h  params.txt  verify.py
Code/Plugin/Tester/Tests/Lowpass_filter/: Lowpass_filter.h  params.txt  verify.py
Code/Plugin/Tester/Tests/Mockup/: Mockup.h  params.txt
Code/Plugin/Tester/Tests/Note_Verification/: Note_Verification.h
Code/Plugin/Tester/Tests/Octave_Verification/: Octave_Verification.h
Code/Plugin/Tester/Tests/Offset_Verification/: Offset_Verification.h  params.txt  verify.py
Code/Plugin/Tester/Tests/Polyphonics/: Polyphonics.h  params.txt  verify.py
Code/Plugin/Tester/Tests/Preformance_Idle/: Preformance_Idle.h  params.txt
Code/Plugin/Tester/Tests/Preformance_Single_Note/: Preformance_Single_Note.h  params.txt
Code/Plugin/pref_logs/: After_Optimizations.diagsession  Pre_Optimizations.diagsession  Pre_Optimizations.vsps  Report_After_optimizations.vsps
Matlab/: testing_lp.m  waveform1.fig
Resources/: about.txt  knob.psd  waves.psd
Resources/Presets/: asshole.xml  bird_simulator_2019.xml  chip_pluck.xml  chip_pluck_lfo_fast.xml  chip_stereo_hihat.xml  fermats.xml  padded_up.xml  plickplock.xml  saw_lead.xml  saw_lr.xml  sista_test.xml  warm_pad.xml
Source/Components/: AboutPageComponent.h  CollectionComponent.cpp  CollectionComponent.h  ConsoleComponent.h  DelayComponent.h  DistComponent.cpp  DistComponent.h  EnvelopeComponent.h  FilterComponent.cpp  FilterComponent.h  InformationComponent.cpp  InformationComponent.h  LFOComponent.h  MarkdownComponent.cpp  MarkdownComponent.h  MasterPageComponent.cpp  MasterPageComponent.h  MixerComponent.cpp  MixerComponent.h  MixerSubComponent.cpp  OSCLFOComponent.h  OscillatorComponent.cpp  OscillatorPageComponent.cpp  OscillatorPageComponent.h  OurTabBarButton.cpp  OurTabBarButton.h  OurTabbedButtonBar.h  ParameterSlider.cpp  ParameterSlider.h  PresetRow.cpp  PresetRow.h  PresetRowModel.h  PresetsComponent.cpp  PresetsComponent.h  ReverbComponent.h  SettingsComponent.cpp  SettingsComponent.h  VolumeMeterComponent.cpp  VolumeMeterComponent.h
Source/Editor/: OurLookAndFeel.cpp  PluginGUI.cpp  PluginGUI.h  PresetManager.cpp  PresetManager.h  ThemePicker.cpp
Source/Effects/: BitcrushEffect.cpp  BitcrushEffect.h  ConvolutionReverb.cpp  ConvolutionReverb.h  DistEffect.cpp  DistEffect.h  FilterButterworth.cpp  FilterButterworth.h  FilterHP.cpp  FilterHP.h  FilterLP.cpp  FilterLP.h
Source/Generators/: EnvelopeGenerator.cpp  EnvelopeGenerator.h  LFO.cpp  LFO.h  WavetableOsc.cpp  WavetableOsc.h
Source/Interfaces/: IEffect.h  IGenerator.cpp  IVSTParameters.cpp  IVSTParameters.h
Source/Processor/: Pipeline.cpp  Pipeline.h  PipelineManager.cpp  PipelineManager.h  PluginProcessor.cpp  PluginProcessor.h
Source/Util/: Constants.cpp  Global.cpp  Global.h  Linkable.cpp  Log.cpp  ParameterHandler.cpp  ParameterListener.cpp  ParameterListener.h  Resources_files.h  TemplateHelper.h
Tester/: CMakeLists.txt  TestHost.cpp  TestHost.h  hostVST.cpp  main.cpp  util.cpp  util.h  wrapperVST.cpp
Tester/Tests/Convolution/: Convolution.h  params.txt
Tester/Tests/Detune_Verification/: params.txt  verify.py
Tester/Tests/Dist_Verification/: Dist_Verification.h  params.txt  verify.py
Tester/Tests/Highpass_filter/: Highpass_filter.h  params.txt  verify.py
Tester/Tests/Lowpass_filter/: Lowpass_filter.h  params.txt
Tester/Tests/Note_Verification/: Note_Verification.h  params.txt  verify.py
Tester/Tests/Octave_Verification/: Octave_Verification.h  params.txt  verify.py
Tester/Tests/Offset_Verification/: Offset_Verification.h  verify.py
Tester/Tests/Polyphonics/: Polyphonics.h
Tester/Tests/Preformance_Idle/: Preformance_Idle.h  params.txt
Tester/Tests/Preformance_Single_Note/: Preformance_Single_Note.h  params.txt
additional_files/Matlab/: fourier_series.m  synthesize.m  testing_lp.m  waveform2.fig
additional_files/Release_notices/: Linux.txt  Windows.txt
additional_files/art/: linear.psd  preset icons.psd
(+56 files in other folders)
